@@ -1,0 +1,18 @@
+<!doctype html>
+<html>
+<script>
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+</script>
+<body>
+<p>Test for <a href="https://bugs.webkit.org/show_bug.cgi?id=17421">bug 17421</a>: 
+Lack of end tag of SELECT element causes  inaccessible (blank) a rest of a page rendered.</p>
+<p>There should be two green bars below.</p>
+<select>
+<input>
+<p style="background-color:lime;">PASS</p>
+<select>
+<textarea></textarea>
+<p style="background-color:lime;">PASS</p>
+</body>
+</html>
